-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.10.0 Beta 1
-
None
-
Windows 10 (msvc2015-x86_64)
[4448:3856:0915/051820.894:ERROR:gl_surface_qt.cpp(382)] GLContextHelper::getEGLDisplay() failed. [4448:3856:0915/051820.900:ERROR:gl_surface_qt.cpp(695)] Requested OpenGL implementation is not supported. Implementation: 0 NMAKE : fatal error U1077: 'call' : return code '0x80000003' Stop. NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\amd64\nmake.exe"' : return code '0x2' Stop. agent:2017/09/15 05:18:22 build.go:203: Process finished with error: exit status 2 agent:2017/09/15 05:18:22 build.go:155: Error reading from stdout/err: exit status 2 agent:2017/09/15 05:18:22 agent.go:77: ERROR building: error unmarshalling testlib xml output: 'XML syntax error on line 317: unexpected EOF'. Most likely the test has crashed
Build log will be added when available in testresults.qt.io
For Gerrit Dashboard: QTBUG-63221 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
205571,3 | Don't pass kInProcessGPU if we pass kDisableGPU | 5.10 | qt/qtwebengine | Status: MERGED | +2 | 0 |