Don't pass kInProcessGPU if we pass kDisableGPU

The in process GPU thread still starts even if kDisableGPU is passed
because kInProcessGPU check has a higher priority in
GpuDataManagerImplPrivate::GpuAccessAllowed(). This caused a crash when
running on Windows with ANGLE.

Make sure not to pass kInProcessGPU if we will disable the GPU.

Task-number: QTBUG-63221
Change-Id: I8f9d154951e9143c7b5049eb641bfad2448b855b
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>